Fixed spacing and floating issues with nested lists.

--- a/source/stylesheets/blog/layout.css.sass
+++ b/source/stylesheets/blog/layout.css.sass
@@ -261,6 +261,10 @@ section
 					padding:
 						left: golden-ratio(1em,-1)
 				ul ul, ul ol, ol ul, ol ol
+					float: none
+					width: 90%
+					margin:
+						left: golden-ratio(1em,1)
 					li
 						margin:
 							left: golden-ratio(1em,1)
